Revision history for Data::Text

0.18
	Bump the version of Params::Get

0.17	Wed Jul 30 20:56:36 EDT 2025
	Fixed example - thanks to RSAVAGE
	Fix http://www.cpantesters.org/report/48702a40-54e1-11f0-877b-a81a6e8775ea

0.16	Tue Apr 29 12:21:49 EDT 2025
	Handle the latest version of Params::Get
	Added clear(), uppercase() and lowercase()
	Refactor replace() to allow more than one replacement per call

0.15	Thu Apr 10 07:41:32 EDT 2025
	Use Test::DescribeMe
	Use Params::Get
	Added t/30-basics.t

0.14	Tue Jul  9 10:01:32 EDT 2024
	Fix https://www.cpantesters.org/cpan/report/f993e0d0-de29-11ee-8176-03e06d8775ea

0.13	Sat Mar  9 09:21:16 EST 2024
	Added appendconjunction()

0.12	Sat Jul 15 11:02:11 EDT 2023
	Fix punctuation in error message
	More useful diagnostic when adding consecutive punctuation
	Catch more consecutive punctuation

0.11	Thu Dec 22 09:34:32 EST 2022
	Avoid assert failure in String::Clean
	Calling new() on an object now returns a clone rather than setting the defaults in the new object

0.10	Mon Aug  1 21:01:05 EDT 2022
	set() when given a list of strings would append instead of setting
	Carp when given a reference to an empty array
	Give more helpful error message
	Simplify the code
	Added == and != operators

0.09	Tue Nov 16 08:14:19 EST 2021
	new() now supports initialisation of the object

0.08	Sun Nov 14 18:54:41 EST 2021
	Added the set() method

0.07	Tue Nov  9 19:11:42 EST 2021
	Length() now returns 0 when no text has been appended

0.06	Tue Nov  9 09:55:19 EST 2021
	Carp if no text is given

0.05	Thu Sep 30 18:17:43 EDT 2021
	Added replace()

0.04	Wed Sep 15 07:33:53 EDT 2021
	Take semi-colons as punctuation
	Added the rtrim() method

0.03	Mon Sep 13 17:53:32 EDT 2021
	Added the trim() method

0.02	Mon Sep 13 14:44:50 EDT 2021
	append() messages can now be daisy chained
	Added length() method
	append() now supports a reference to an array of strings to add

0.01	Sun Sep 12 16:40:26 EDT 2021
        First draft