@@ -2,6 +2,7 @@ Revision history for Data::Text
 
 0.18
 	Bump the version of Params::Get
+	Ensure length() returns the number of characters, not the number of bytes
 
 0.17	Wed Jul 30 20:56:36 EDT 2025
 	Fixed example - thanks to RSAVAGE
